# hNVSE

./: .clang-format  .gitignore  CMakeLists.txt  README.md
hNVSE/: hNVSE.cpp  nvse_plugin_example.vcxproj  nvse_plugin_example.vcxproj.filters
src/: CMakeLists.txt  hnvse.cpp  hnvse.hpp  main.cpp  mane.cpp
src/functions/: hnvse_fn_region.hpp  hnvse_fn_worldspace.hpp
src/hooks/: CMakeLists.txt  hnvse_hk_region.hpp
src/internal/: hnvse_utility.cpp  hnvse_utility.hpp
